--- a/platformio.ini
+++ b/platformio.ini
@@ -17,9 +17,9 @@ src_dir = src/fiz-o-matic
 platform = atmelsam
 board = adafruit_feather_m0_express
 framework = arduino
-build_flags = -w -DDEBUG -DHW_FEATHER_EXPRESS -DOLED
+build_flags = -w -DDEBUG -DHW_FEATHER_EXPRESS -DDOGS102
 extra_scripts = post:post_script.py
-lib_deps = 
+lib_deps =
 	arduino-libraries/Scheduler@^0.4.4
 	vshymanskyy/TinyGSM@^0.10.9
 	adafruit/Adafruit SPIFlash@3.2.1
@@ -37,9 +37,69 @@ lib_deps =
 platform = atmelsam
 board = adafruit_feather_m0_express
 framework = arduino
-build_flags = -w -DDEBUG -DHW_FEATHER_EXPRESS -DOLED
+build_flags = -w -DHW_FEATHER_EXPRESS -DOLED
 extra_scripts = post:post_script.py
-lib_deps = 
+lib_deps =
+	arduino-libraries/Scheduler@^0.4.4
+	vshymanskyy/TinyGSM@^0.10.9
+	adafruit/Adafruit SPIFlash@3.2.1
+	blynkkk/Blynk@^0.6.1
+	olikraus/U8g2@^2.28.8
+	arduino-libraries/RTCZero@^1.6.0
+	adafruit/Adafruit ZeroTimer Library @ ^2.2.1
+	adafruit/Adafruit SleepyDog Library@^1.3.2
+	milesburton/DallasTemperature@^3.9.1
+	adafruit/Adafruit BusIO@1.4.0
+	sandeepmistry/CAN@^0.3.1
+	cmaglie/FlashStorage@^1.0.0
+
+[env:LOGGER_OLED_TYP2]
+platform = atmelsam
+board = adafruit_feather_m0_express
+framework = arduino
+build_flags = -w -DHW_FEATHER -DOLED
+extra_scripts = post:post_script.py
+lib_deps =
+	arduino-libraries/Scheduler@^0.4.4
+	vshymanskyy/TinyGSM@^0.10.9
+	adafruit/Adafruit SPIFlash@3.2.1
+	blynkkk/Blynk@^0.6.1
+	olikraus/U8g2@^2.28.8
+	arduino-libraries/RTCZero@^1.6.0
+	adafruit/Adafruit ZeroTimer Library @ ^2.2.1
+	adafruit/Adafruit SleepyDog Library@^1.3.2
+	milesburton/DallasTemperature@^3.9.1
+	adafruit/Adafruit BusIO@1.4.0
+	sandeepmistry/CAN@^0.3.1
+	cmaglie/FlashStorage@^1.0.0
+
+[env:LOGGER_DOGS_TYP2]
+platform = atmelsam
+board = adafruit_feather_m0_express
+framework = arduino
+build_flags = -w -DHW_FEATHER -DDOGS102
+extra_scripts = post:post_script.py
+lib_deps =
+	arduino-libraries/Scheduler@^0.4.4
+	vshymanskyy/TinyGSM@^0.10.9
+	adafruit/Adafruit SPIFlash@3.2.1
+	blynkkk/Blynk@^0.6.1
+	olikraus/U8g2@^2.28.8
+	arduino-libraries/RTCZero@^1.6.0
+	adafruit/Adafruit ZeroTimer Library @ ^2.2.1
+	adafruit/Adafruit SleepyDog Library@^1.3.2
+	milesburton/DallasTemperature@^3.9.1
+	adafruit/Adafruit BusIO@1.4.0
+	sandeepmistry/CAN@^0.3.1
+	cmaglie/FlashStorage@^1.0.0
+
+[env:EXPRESS_DOGS_TYP2]
+platform = atmelsam
+board = adafruit_feather_m0_express
+framework = arduino
+build_flags = -w -DHW_FEATHER_EXPRESS -DDOGS102
+extra_scripts = post:post_script.py
+lib_deps =
 	arduino-libraries/Scheduler@^0.4.4
 	vshymanskyy/TinyGSM@^0.10.9
 	adafruit/Adafruit SPIFlash@3.2.1
