--- a/platformio.ini
+++ b/platformio.ini
@@ -17,7 +17,7 @@ src_dir = src/fiz-o-matic
 platform = atmelsam
 board = adafruit_feather_m0_express
 framework = arduino
-build_flags = -w -DDEBUG -DHW_FEATHER_EXPRESS -DDOGS102
+build_flags = -w -DDEBUG -DHW_FEATHER_EXPRESS -DCANBUS
 extra_scripts = post:post_script.py
 lib_deps =
 	arduino-libraries/Scheduler@^0.4.4
