--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = DEBUG
+default_envs = EXPRESS_OLED_TYP2
 build_dir = ./build/
 src_dir = src/fiz-o-matic
 
@@ -17,11 +17,12 @@ src_dir = src/fiz-o-matic
 platform = atmelsam
 board = adafruit_feather_m0_express
 framework = arduino
-build_flags = -w -DDEBUG -DHW_FEATHER_EXPRESS -DCANBUS
+;build_flags = -w -DDEBUG -DHW_FEATHER_EXPRESS -DCANBUS
+build_flags = -w -DDEBUG -DHW_FEATHER_EXPRESS -DDOGS102
 extra_scripts = post:post_script.py
 lib_deps =
 	arduino-libraries/Scheduler@^0.4.4
-	vshymanskyy/TinyGSM@^0.10.9
+	vshymanskyy/TinyGSM@^0.11.4
 	adafruit/Adafruit SPIFlash@3.2.1
 	blynkkk/Blynk@^0.6.1
 	olikraus/U8g2@^2.28.8
@@ -34,14 +35,35 @@ lib_deps =
 	cmaglie/FlashStorage@^1.0.0
 
 [env:EXPRESS_OLED_TYP2]
+	platform = atmelsam
+	board = adafruit_feather_m0_express
+	framework = arduino
+	build_flags = -w -DHW_FEATHER_EXPRESS -DOLED
+	extra_scripts = post:post_script.py
+	lib_deps =
+		arduino-libraries/Scheduler@^0.4.4
+		vshymanskyy/TinyGSM@^0.11.4
+		adafruit/Adafruit SPIFlash@3.2.1
+		blynkkk/Blynk@^0.6.1
+		olikraus/U8g2@^2.28.8
+		arduino-libraries/RTCZero@^1.6.0
+		adafruit/Adafruit ZeroTimer Library @ ^2.2.1
+		adafruit/Adafruit SleepyDog Library@^1.3.2
+		milesburton/DallasTemperature@^3.9.1
+		adafruit/Adafruit BusIO@1.4.0
+		sandeepmistry/CAN@^0.3.1
+		cmaglie/FlashStorage@^1.0.0
+
+
+[env:EXPRESS_OLED_TYP2_DEBUG]
 platform = atmelsam
 board = adafruit_feather_m0_express
 framework = arduino
-build_flags = -w -DHW_FEATHER_EXPRESS -DOLED
+build_flags = -w -DHW_FEATHER_EXPRESS -DOLED -DDEBUG
 extra_scripts = post:post_script.py
 lib_deps =
 	arduino-libraries/Scheduler@^0.4.4
-	vshymanskyy/TinyGSM@^0.10.9
+	vshymanskyy/TinyGSM@^0.11.4
 	adafruit/Adafruit SPIFlash@3.2.1
 	blynkkk/Blynk@^0.6.1
 	olikraus/U8g2@^2.28.8
@@ -53,6 +75,7 @@ lib_deps =
 	sandeepmistry/CAN@^0.3.1
 	cmaglie/FlashStorage@^1.0.0
 
+
 [env:LOGGER_OLED_TYP2]
 platform = atmelsam
 board = adafruit_feather_m0_express
@@ -61,7 +84,7 @@ build_flags = -w -DHW_FEATHER -DOLED
 extra_scripts = post:post_script.py
 lib_deps =
 	arduino-libraries/Scheduler@^0.4.4
-	vshymanskyy/TinyGSM@^0.10.9
+	vshymanskyy/TinyGSM@^0.11.4
 	adafruit/Adafruit SPIFlash@3.2.1
 	blynkkk/Blynk@^0.6.1
 	olikraus/U8g2@^2.28.8
@@ -81,7 +104,7 @@ build_flags = -w -DHW_FEATHER -DDOGS102
 extra_scripts = post:post_script.py
 lib_deps =
 	arduino-libraries/Scheduler@^0.4.4
-	vshymanskyy/TinyGSM@^0.10.9
+	vshymanskyy/TinyGSM@^0.11.4
 	adafruit/Adafruit SPIFlash@3.2.1
 	blynkkk/Blynk@^0.6.1
 	olikraus/U8g2@^2.28.8
@@ -101,7 +124,7 @@ build_flags = -w -DHW_FEATHER_EXPRESS -DDOGS102
 extra_scripts = post:post_script.py
 lib_deps =
 	arduino-libraries/Scheduler@^0.4.4
-	vshymanskyy/TinyGSM@^0.10.9
+	vshymanskyy/TinyGSM@^0.11.4
 	adafruit/Adafruit SPIFlash@3.2.1
 	blynkkk/Blynk@^0.6.1
 	olikraus/U8g2@^2.28.8
